# exact-online-sdk

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: task-8-sync-client.txt  task-8-sync-override.txt  task-9-async-client.txt  task-9-async-override.txt
config/: settings.py
src/exact_online_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py
src/exact_online_sdk/api/: __init__.py  endpoints.py
src/exact_online_sdk/contrib/: __init__.py  aws.py
src/exact_online_sdk/models/: __init__.py  absence_registration.py  absence_registration_transaction.py  account.py  account_class.py  account_classification.py  account_classification_name.py  account_involved_account.py  account_owner.py  account_status.py  accountant_info.py  address.py  address_state.py  all_division.py  allocation_rule.py  assembly_bill_of_material_header.py  assembly_bill_of_material_material.py  assembly_order.py  asset.py  asset_group.py  available_feature.py  bank.py  bank_account.py  bank_entry.py  bank_entry_line.py  base.py  batch_number.py  bill_of_material_material.py  bill_of_material_version.py  blocked_project_purchase.py  blocked_project_sale.py  budget.py  budget_scenario.py  by_product.py  cash_entry.py  cash_entry_line.py  commercial_building_value.py  communication_note.py  complaint.py  contact.py  (+172 more)
src/exact_online_sdk/utils/: logger.py
tests/api/e2e/: account_invoice_business_journey_test.py
tests/api/performance/: base_api_pagination_performance_test.py
tests/api/unit/: api_endpoints_test.py  base_api_filters_test.py
tests/auth/unit/: auth_async_flow_test.py  auth_authorization_flow_test.py  auth_error_handling_test.py  auth_thread_safety_test.py  auth_token_storage_test.py  aws_secrets_manager_storage_test.py  encrypted_file_token_storage_clear_test.py  exact_online_auth_test.py
tests/client/e2e/: client_auth_pagination_e2e_test.py
tests/client/integration/: client_api_integration_test.py  client_async_integration_test.py
tests/client/performance/: client_pagination_performance_test.py
tests/client/regression/: client_rate_limit_regression_test.py
tests/client/unit/: client_async_pagination_test.py  client_core_test.py  client_pagination_test.py  client_public_methods_test.py  client_request_id_test.py  client_thread_safety_test.py
tests/config/unit/: config_settings_test.py
tests/exceptions/unit/: exceptions_mapping_test.py
tests/logger/unit/: logger_core_test.py  logger_thread_safety_test.py
tests/models/performance/: sales_invoice_performance_test.py
tests/models/regression/: sales_invoice_roundtrip_regression_test.py
tests/models/unit/: account_classification_model_test.py  account_model_test.py  accountancy_models_test.py  activities_models_test.py  address_model_test.py  address_state_model_test.py  asset_models_test.py  base_strict_model_test.py  budget_models_test.py  bulk_crm_models_test.py  bulk_document_attachment_model_test.py  bulk_document_model_test.py  cashflow_models_test.py  contact_model_test.py  document_attachment_info_model_test.py  document_attachment_model_test.py  document_category_model_test.py  document_folder_model_test.py  document_model_test.py  document_type_category_model_test.py  document_type_folder_model_test.py  document_type_model_test.py  drop_shipment_model_test.py  expensemanagement_models_test.py  financial_and_project_models_test.py  financial_models_test.py  financialtransaction_models_test.py  general_models_test.py  generaljournalentry_models_test.py  goods_delivery_model_test.py  hrm_models_test.py  inventory_models_test.py  item_group_model_test.py  item_model_test.py  item_version_model_test.py  (+16 more)
(+8 files in other folders)
